--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.1",
     "http": "0.0.0",
+    "log": "^1.4.0",
+    "mongoose": "^4.4.11",
     "morgan": "~1.6.1",
     "socket.io": "^1.4.5"
   }
